--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,10 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Alata&family=DynaPuff&display=swap" rel="stylesheet">
     <meta
       name="description"
       content="Web site created using create-react-app"
