--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Alata&family=DynaPuff&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Alata&family=DynaPuff&display=swap"
+      rel="stylesheet"
+    />
     <meta
       name="description"
       content="Web site created using create-react-app"
@@ -33,7 +36,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" class="viewportDiv"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
