--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -13,7 +13,7 @@
     />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simmer The Toads aims to refine playlists of varying artists and genres to gradually transition from various music styles to create a cohesive listening experience."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
